# pacd

./: Cargo.toml  LICENSE  README.md  domains.txt
data/: proxy.pac.hbs
src/: main.rs
