[package]
name = "pacd"
version = "0.1.0"
authors = ["pacd"]
edition = "2018"
repository = "https://github.com/pacd0/pacd"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version="1.5", features=["attributes"] }
clap = "2.33"
dotenv = "0.15"
femme = "1.3"
handlebars = "3.0"
log = "0.4"
serde_json = "1.0"
tide = "0.6"
